crates/flui_core/bench_results.txt
   Compiling proc-macro2 v1.0.101
   Compiling quote v1.0.41
   Compiling unicode-ident v1.0.19
   Compiling serde_core v1.0.228
   Compiling serde v1.0.228
   Compiling cfg-if v1.0.4
   Compiling windows-link v0.2.1
   Compiling stable_deref_trait v1.2.1
   Compiling autocfg v1.5.0
   Compiling windows_x86_64_msvc v0.52.6
   Compiling crossbeam-utils v0.8.21
   Compiling khronos_api v3.1.0
   Compiling zerocopy v0.8.27
   Compiling once_cell v1.21.3
   Compiling cfg_aliases v0.2.1
   Compiling xml-rs v0.8.27
   Compiling getrandom v0.3.4
   Compiling pin-project-lite v0.2.16
   Compiling litemap v0.8.0
   Compiling log v0.4.28
   Compiling writeable v0.6.1
   Compiling icu_normalizer_data v2.0.0
   Compiling parking_lot_core v0.9.12
   Compiling icu_properties_data v2.0.1
   Compiling crc32fast v1.5.0
   Compiling scopeguard v1.2.0
   Compiling simd-adler32 v0.3.7
   Compiling version_check v0.9.5
   Compiling windows_x86_64_msvc v0.53.1
   Compiling ttf-parser v0.25.1
   Compiling adler2 v2.0.1
   Compiling unicode-segmentation v1.12.0
   Compiling ab_glyph_rasterizer v0.1.10
   Compiling windows-sys v0.61.2
   Compiling nohash-hasher v0.2.0
   Compiling lock_api v0.4.14
   Compiling winit v0.30.12
   Compiling tracing-core v0.1.34
   Compiling miniz_oxide v0.8.9
   Compiling fdeflate v0.3.7
   Compiling utf8_iter v1.0.4
   Compiling percent-encoding v2.3.2
   Compiling base64 v0.22.1
   Compiling raw-window-handle v0.6.2
   Compiling epaint_default_fonts v0.33.0
   Compiling profiling v1.0.17
   Compiling ahash v0.8.12
error[E0080]: scalar size mismatch: expected 0 bytes but got 8 bytes instead
   --> C:\Users\vanya\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\fdeflate-0.3.7\src\tables.rs:22:52
    |
 22 | pub(crate) const HUFFMAN_CODES: [u16; 286] = match crate::compute_codes(&HUFFMAN_LENGTHS) {
    |                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `tables::HUFFMAN_CODES` failed inside this call
    |
note: inside `compute_codes::<286>`
   --> C:\Users\vanya\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\fdeflate-0.3.7\src\lib.rs:108:15
    |
108 |         while i < lengths.len() {
    |               ^^^^^^^^^^^^^^^^^ the failure occurred here

   Compiling form_urlencoded v1.2.2
   Compiling glutin v0.32.3
For more information about this error, try `rustc --explain E0080`.
error: could not compile `fdeflate` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
